task-54-1 rails-i18n instead russian, pluralization errors count

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,6 +26,12 @@ ru:
     name: 'Шашлыки'
     company: 'Хороший программист'
 
-
+  validate_errors:
+    error:
+      zero: 'нет ошибок'
+      one: '%{count} ошибка'
+      few: '%{count} ошибки'
+      many: '%{count} ошибок'
+      other: 'ошибки'
 
 
