--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -116,8 +116,8 @@ ru:
       already_signed_out: Выход из системы уже выполнен.
       new:
         sign_in: Войти
-      signed_in: Вход в систему выполнен.
-      signed_out: Выход из системы выполнен.
+      signed_in: Выполнен вход в систему.
+      signed_out: Вы вышли из системы.
     shared:
       links:
         back: Назад
