--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -52,6 +52,7 @@ ru:
 
   are_you_sure: 'Вы действительно хотите удалить?'
   belongs_to_another_registered_user: 'принадлежит зарегистрированному пользователю'
+  author_cannot_subscribe: 'автор не может подписаться на свои события'
 
   controllers:
     comments:
