only locgged user can upload photos

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -46,6 +46,7 @@ ru:
     sign_up: Зарегистрироваться
     send: Отправить
     subscribe: Подписаться
+    upload: Загрузить
 
   app:
     name: 'Шашлыки'
