add feature spec for signed user

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -36,6 +36,7 @@ ru:
   action:
     show: Показать
     back: Назад
+    create_event: Создать событие
     update: Изменить
     destroy: Удалить
     save: Ввести
