add new photo notification for subscribers and the event`s author, but not for photo`s author

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -104,6 +104,11 @@ ru:
       event: 'Событие'
       datetime: 'Состоится'
       owner: 'Организатор'
+    photo:
+      title: Новая фотография
+      event: 'Событие'
+      datetime: 'Состоится'
+      owner: 'Организатор'
   .pincode: Код доступа
 
   pundit:
