--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -88,6 +88,9 @@ ru:
   subscriptions:
     subscription:
       destroy_confirm: 'Вы уверены, что хотите удалить эту подписку?'
+  photos:
+    photo:
+      destroy_confirm: 'Вы уверены, что хотите удалить это фото?'
 
   event_mailer:
     comment:
